// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReferenceItemBuild /> should render 'No Build Found' when [latestBuild=null] 1`] = `
<Info__ReferenceItemInfo>
  <strong>
    No index found. 
  </strong>
  <Link
    to={
      Object {
        "pathname": "/refs/foo/indexes",
        "state": Object {
          "rebuild": true,
        },
      }
    }
  >
    Build one. 
  </Link>
  <small>
    You cannot use this reference until you have built an index for it.
  </small>
</Info__ReferenceItemInfo>
`;

exports[`<ReferenceItemBuild /> should render 'No Build Found' when [progress=30] 1`] = `
<Info__ReferenceItemInfo>
  <strong>
    No index found. 
  </strong>
  <Link
    to={
      Object {
        "pathname": "/refs/foo/indexes",
        "state": Object {
          "rebuild": true,
        },
      }
    }
  >
    Build one. 
  </Link>
  <small>
    You cannot use this reference until you have built an index for it.
  </small>
</Info__ReferenceItemInfo>
`;

exports[`<ReferenceItemBuild /> should render build info when latestBuild available and [progress=100] 1`] = `
<Info__ReferenceItemInfo>
  <strong>
    Latest Build 
  </strong>
  <span>
    is 
  </span>
  <Link
    to="/refs/foo/indexes/bar"
  >
    Index 
    3
  </Link>
  <small>
    Created 
    <RelativeTime
      time="2018-01-01T00:00:00.000000Z"
    />
     by 
    bob
  </small>
</Info__ReferenceItemInfo>
`;
